--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
               <img src="imgs/pic.jpg">
             </div>
     			<div id="hero-div">
-    				<p id="hero-name">Kimberly Lalmansingh<p>
+    				<h1 id="hero-name">Kimberly Lalmansingh</h1>
     			</div>
     		</div>
 
@@ -23,11 +23,7 @@
 
     	</div>
 
-
-
-
-
-     <!-- <% include ./partials/footer %> -->
+     <% include ./partials/footer %>
 
     </body>
 </html>
