--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid">
+<!-- <div class="container-fluid">
 	<div  id="footer">
 		<ul class="navbar-nav mx-auto">
 	  <li class="nav-item active">
@@ -17,7 +17,7 @@
 	  </li>
 	</ul>
 	</div>
-</div>
+</div> -->
 
 
 
