added about me page, fixed some css

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,23 +1,13 @@
-
-
-<!-- <div class="container-fluid">
-	<div  id="footer">
-		<ul class="navbar-nav mx-auto">
-	  <li class="nav-item active">
-	    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Projects</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="LalmansinghKimberlyResume.pdf">Résumé</a>
-	  </li>
-	  <li class="nav-item">
-	    <a class="nav-link" href="#">Contact</a>
-	  </li>
-	</ul>
+<div class="container-fluid" id="footer-container">
+	<div class="row">
+		<div class="col-md-12">
+			<div id="footer">
+				<p>Copyright &copy; Kimberly Lalmansingh</p>
+			</div>
+		</div>
 	</div>
-</div> -->
+</div>
+
 
 
 
