--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -12,7 +12,7 @@
 
     		<div class="container-fluid" id="projects-container">
             	<div class="row justify-content-center">
-            		<div class="card-deck" style="padding: 15px">
+            		<div class="card-deck" id="projects-row-1" style="padding: 15px">
 	   					<div class="card col-md-3">
 	   						<div class="card-body text-center">
 						      <h5 class="card-title">Mini Jukebox</h5>
