--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 body {
 	margin: 0; !important
 	padding: 0; !important
+	background-color: #F9FFFD;
 }
 
 
@@ -17,15 +18,15 @@ h1 {
 
 #hero {
 	width: 100%;
-	height: 700px;
-	margin-top: 50px;
-	text-align: center;
+	height: 650px;
+	margin-top: 30px;
 	background-color: #F9FFFD;
 }
 
 #hero-div {
 	margin-top: 50px;
-
+	height: auto;
+	width: auto;
 }
 
 #hero-name {
@@ -35,8 +36,8 @@ h1 {
 }
 
 #photo img {
-	height: 400px;
-	width: 400px;
+	height: 420px;
+	width: 380px;
 	border-radius: 50%;
 	margin-top: 80px;
 }
@@ -59,11 +60,58 @@ h1 {
 }
 
 #projects-container {
-	margin-top: 170px;
+	margin-top: 90px;
+}
+
+#projects-row-1 {
+	margin-top: 30px;
 }
 
 .cardp {
 	font-size: 12px;
 	color: #C6AE43;
 	font-family: Helvetica;
+}
+
+#description {
+	margin-top: 180px;
+}
+
+#footer-container {
+	height: 50px;
+	background-color: #C6AE43;
+	position: fixed;
+	bottom: 0;
+}
+
+#footer {
+	bottom: 0;
+	margin-top: 10px;
+}
+
+#footer p {
+	color: white;
+	bottom: 0;
+	font-size: 10px;
+}
+
+@media screen and (max-width: 510px) {  
+   #photo img {
+   	width: 280px;
+   	height: 320px;
+   }
+}
+
+@media screen and (max-width: 575px) {  
+	#projects-container {
+		margin-top: 55px;
+		margin-bottom: 50px;
+	}
+}
+
+@media screen and (max-width: 767px) {  
+	#contact-container {
+		margin-top: 55px;
+		margin-bottom: 50px;
+	}
 }
