--- a/views/about-me.ejs
+++ b/views/about-me.ejs
@@ -10,18 +10,16 @@
     		<% include ./partials/navbar %>
 
 
-    		<div class="container-fluid" id="hero">
+    		<div class="container-fluid" id="description">
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <div id="photo">
-                            <img src="imgs/pic.jpg">
-                        </div>
-                        <div id="hero-div">
-                            <h1 id="hero-name">Kimberly Lalmansingh</h1>
-                        </div>
+                        <p>I am a recent graduate Magna Cum Laude with a Bachelor of Science in Computer Science and a minor in Mathematics. </p>
                     </div>
                 </div>
     		</div>
+
+
+
     	</div>
 
      <% include ./partials/footer %>
