--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,6 +8,9 @@
         <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/About-Me">About</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/Projects">Projects</a>
       </li>
       <li class="nav-item">
