added to aboutm me page

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,7 +6,7 @@
 
     <body>
 
-    	<div class="contact-page">
+    	<div class="page">
     	<% include ./partials/navbar %>
 
 	    	<div class="container-fluid" id="contact-container">
