--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,7 +6,7 @@
 
     <body>
 
-    	<div class="project-page">
+    	<div class="page">
     		<% include ./partials/navbar %>
 
 
@@ -40,7 +40,7 @@
 	   				</div>
             	</div>
 
-            	<div class="row justify-content-center" style="margin-top: 40px">
+            	<div class="row justify-content-center text-center" style="margin-top: 40px">
             		<h2>Working with Algorithms & Notable Projects</h2>
             		<div class="card-deck" style="padding: 15px">
             			<div class="card col-md-3">
@@ -58,13 +58,13 @@
 	   					<div class="card col-md-3">
 	   						<div class="card-body text-center">
 						      <h5 class="card-title">Snowman World</h5>
-						      <p class="card-text cardp">C++</p>
+						      <p class="card-text cardp">C++, OpenGL</p>
 						    </div>
 	   					</div>
 	   					<div class="card col-md-3">
 	   						<div class="card-body text-center">
 						      <h5 class="card-title">More...</h5>
-						      <p class="card-text cardp"></p>
+						      <p class="card-text cardp">Course Work, Data Structures, Learning Projects</p>
 						    </div>
 	   					</div>
             		</div>
