--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,11 @@ h1 {
 	font-family: Helvetica;
 }
 
+.page {
+	/*background-color: #F5D7DD;*/
+	height: 100%;
+}
+
 
 #nav {
 	width: 100%;
@@ -74,7 +79,23 @@ h1 {
 }
 
 #description {
-	margin-top: 180px;
+	margin-top: 9rem;
+	padding-left: 10%;
+	padding-right: 10%;
+}
+
+.skill-icon {
+	font-size: 100px;
+	padding: .4rem;
+}
+
+.skill-card {
+	align-items: center;
+}
+
+.skill-card img {
+	height: 80px;
+	width: 70px;
 }
 
 #footer-container {
@@ -100,6 +121,10 @@ h1 {
    	width: 280px;
    	height: 320px;
    }
+
+   #hero {
+   	margin-top: 20px;
+   }
 }
 
 @media screen and (max-width: 575px) {  
@@ -107,11 +132,21 @@ h1 {
 		margin-top: 55px;
 		margin-bottom: 50px;
 	}
+
+	#skills-container {
+		margin-bottom: 30px;
+	}
 }
 
 @media screen and (max-width: 767px) {  
 	#contact-container {
 		margin-top: 55px;
 		margin-bottom: 50px;
+	}
+}
+
+@media screen and (max-width: 656px) {  
+	#skills-container {
+		margin-bottom: 45px;
 	}
 }
