--- a/views/about-me.ejs
+++ b/views/about-me.ejs
@@ -13,16 +13,69 @@
     		<div class="container-fluid" id="description">
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <p>I am a recent graduate Magna Cum Laude with a Bachelor of Science in Computer Science and a minor in Mathematics. </p>
+                        <p>I am a recent graduate from CUNY Queens College with a Bachelor of Science in Computer Science and a minor in Mathematics. I am currently a Software Engineering Intern at a startup called SyncIoT. SyncIoT
+                        is an energy-saving software which integrates the Internet of Things, smart devices, and collects 
+                        data and analytics commercially and residentially.</p>
+                        <p>I am an alum of Tech Talent Pipeline (TTP) which is in partnership with NY Code + Design Academy. During my residency at TTP, I learned about the fundementals of Web Development which consisted of HTML, CSS, Javascript, JQuery, and Node.js with ExpressJS. After residency, I was placed at Queens Library where I interned as a Software Engineer.</p>
                     </div>
                 </div>
     		</div>
 
+            <hr />
 
+            <div class="container-fluid" id="skills-container">
+                <div class="row justify-content-center">
+                    <h2>Skills & Technologies</h2>
+                    <div class="card-deck col-md-10" style="margin-bottom: 10px">
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-html5 card-img skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-css3-alt skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-js-square skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-node-js skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/Expressjs.png">
+                        </div>
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/jquery.png">
+                        </div>
+                    </div>
+
+                    <div class="card-deck col-md-10" style="margin-bottom: 10px">
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/mongodb.png">
+                        </div>
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/cpp.png">
+                        </div>
+                         <div class="card skill-card border-0">
+                            <i class="fab fa-php card-img skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/bootstrap.svg">
+                        </div>
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-react card-img skill-icon"></i>
+                        </div>
+                        <div class="card skill-card border-0">
+                            <i class="fab fa-github card-img skill-icon"></i>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+     <% include ./partials/footer %>
 
     	</div>
 
-     <% include ./partials/footer %>
 
     </body>
 </html>
