--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,8 @@ h1 {
 
 #nav {
 	width: 100%;
-	background-color: #C6AE43;
+	min-height: 50px;
+	background-color: #F1686A;
 }
 
 #hero {
@@ -36,8 +37,8 @@ h1 {
 
 #hero-name {
 	color: #C6AE43;
-	font-family: "Lucida Console", Monaco, monospace;
-	font-size: 40px;
+	font-family: 'Courgette', cursive;
+	font-size: 65px;
 }
 
 #photo img {
@@ -57,7 +58,7 @@ h1 {
 }
 
 .contact-item a {
-	color: #C6AE43;
+	color: #F1686A;
 }
 
 .contact-item a:hover {
@@ -74,7 +75,7 @@ h1 {
 
 .cardp {
 	font-size: 12px;
-	color: #C6AE43;
+	color: #F1686A;
 	font-family: Helvetica;
 }
 
@@ -82,6 +83,10 @@ h1 {
 	margin-top: 9rem;
 	padding-left: 10%;
 	padding-right: 10%;
+}
+
+#skills-container {
+	margin-bottom: 40px;
 }
 
 .skill-icon {
@@ -98,25 +103,30 @@ h1 {
 	width: 70px;
 }
 
+.skill-card h5, .skill-card h6 {
+	font-family: 'Courgette', cursive;
+	color: #F1686A;
+}
+
 #footer-container {
 	height: 50px;
-	background-color: #C6AE43;
+	background-color: #F1686A;
 	position: fixed;
 	bottom: 0;
 }
 
 #footer {
 	bottom: 0;
-	margin-top: 10px;
+	margin-top: 25px;
 }
 
 #footer p {
 	color: white;
 	bottom: 0;
-	font-size: 10px;
+	font-size: 9px;
 }
 
-@media screen and (max-width: 510px) {  
+@media screen and (max-width: 671px) {  
    #photo img {
    	width: 280px;
    	height: 320px;
@@ -147,6 +157,6 @@ h1 {
 
 @media screen and (max-width: 656px) {  
 	#skills-container {
-		margin-bottom: 45px;
+		margin-bottom: 50px;
 	}
 }
