--- a/views/about-me.ejs
+++ b/views/about-me.ejs
@@ -29,42 +29,54 @@
                     <div class="card-deck col-md-10" style="margin-bottom: 10px">
                         <div class="card skill-card border-0">
                             <i class="fab fa-html5 card-img skill-icon"></i>
+                            <h5>HTML5</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-css3-alt skill-icon"></i>
+                            <h5>CSS3</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-js-square skill-icon"></i>
+                            <h5>Javascript</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-node-js skill-icon"></i>
+                            <h5>Node.js</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/Expressjs.png">
+                            <h5>ExpressJS</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/jquery.png">
+                            <h5>jQuery</h5>
                         </div>
                     </div>
 
                     <div class="card-deck col-md-10" style="margin-bottom: 10px">
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/mongodb.png">
+                            <h5>MongoDB</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/cpp.png">
+                            <h5>C++</h5>
                         </div>
                          <div class="card skill-card border-0">
                             <i class="fab fa-php card-img skill-icon"></i>
+                            <h5>PHP</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/bootstrap.svg">
+                            <h5>Bootstrap</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-react card-img skill-icon"></i>
+                            <h5>React</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-github card-img skill-icon"></i>
+                            <h6>Git/Github/Heroku</h6>
                         </div>
                     </div>
 
