--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div id="footer">
-				<p>Copyright &copy; Kimberly Lalmansingh</p>
+				<p>Copyright &copy; Kimberly Lalmansingh 2018</p>
 			</div>
 		</div>
 	</div>
