--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -12,6 +12,7 @@
 
     		<div class="container-fluid" id="projects-container">
             	<div class="row justify-content-center">
+            		<h2>Working with the Web</h2>
             		<div class="card-deck" id="projects-row-1" style="padding: 15px">
 	   					<div class="card col-md-3">
 	   						<div class="card-body text-center">
