--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,6 +73,11 @@ h1 {
 	margin-top: 30px;
 }
 
+.project-link {
+	font-size: 10px;
+	color: black;
+}
+
 .cardp {
 	font-size: 12px;
 	color: #F1686A;
