--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,19 +5,19 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav mx-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/">Home </a>
+        <a class="nav-link section-link" href="#description">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/About-Me">About</a>
+        <a class="nav-link section-link" href="#skills-container">Skills</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Projects">Projects</a>
+        <a class="nav-link section-link" href="#projects-container">Projects</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="LalmansinghKimberlyResume.pdf" target="_blank">Résumé</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/Contact">Contact</a>
+        <a class="nav-link section-link" href="#contact-container">Contact</a>
       </li>
     </ul>
   </div>
