new layout fixes

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,9 +5,8 @@ body {
 }
 
 
-h1 {
-	color: #C6AE43;
-	font-family: Helvetica;
+.font {
+	font-family: 'Courgette', cursive;
 }
 
 .page {
@@ -22,11 +21,15 @@ h1 {
 	background-color: #F1686A;
 }
 
+#nav a {
+	font-family: 'Courgette', cursive;
+}
+
 #hero {
 	width: 100%;
-	height: 650px;
-	margin-top: 30px;
-	background-color: #F9FFFD;
+	height: 685px;
+	margin-top: 40px;
+	background-color: #EBF4F3;
 }
 
 #hero-div {
@@ -37,7 +40,6 @@ h1 {
 
 #hero-name {
 	color: #C6AE43;
-	font-family: 'Courgette', cursive;
 	font-size: 65px;
 }
 
@@ -49,12 +51,12 @@ h1 {
 }
 
 #contact-container {
-	margin-top: 170px;
-
+	padding: 2%;
+	background-color: #EBF4F3;
 }
 
 .contact-item {
-	font-size: 200px;
+	font-size: 180px;
 }
 
 .contact-item a {
@@ -66,8 +68,14 @@ h1 {
 }
 
 #projects-container {
-	margin-top: 90px;
+	background-color: #DDB3BC;
+	padding: 3%;
 }
+
+.card-body {
+	/*background-color: #DDB3BC;*/
+}
+
 
 #projects-row-1 {
 	margin-top: 30px;
@@ -81,17 +89,24 @@ h1 {
 .cardp {
 	font-size: 12px;
 	color: #F1686A;
-	font-family: Helvetica;
+	font-family: 'Courgette', cursive;
+}
+
+.card-title {
+	font-size: 20px;
+	/*color: #F1686A;*/
+	font-family: 'Courgette', cursive;
 }
 
 #description {
-	margin-top: 9rem;
-	padding-left: 10%;
-	padding-right: 10%;
+	padding: 4%;
+/*	padding-left: 10%;
+	padding-right: 10%;*/
+	background-color: #EDD7DD;
 }
 
 #skills-container {
-	margin-bottom: 40px;
+	padding: 4%;
 }
 
 .skill-icon {
@@ -114,9 +129,10 @@ h1 {
 }
 
 #footer-container {
+	width: 100%,
 	height: 50px;
 	background-color: #F1686A;
-	position: fixed;
+	/*position: fixed;*/
 	bottom: 0;
 }
 
@@ -142,7 +158,7 @@ h1 {
    }
 }
 
-@media screen and (max-width: 575px) {  
+/*@media screen and (max-width: 575px) {  
 	#projects-container {
 		margin-top: 55px;
 		margin-bottom: 50px;
@@ -164,4 +180,4 @@ h1 {
 	#skills-container {
 		margin-bottom: 50px;
 	}
-}
+}*/
