--- a/views/portfolio-page.ejs
+++ b/views/portfolio-page.ejs
@@ -5,9 +5,14 @@
     </head>
 
     <body>
-
     	<div class="page">
-    		<% include ./partials/navbar %>
+
+            <div class="container-fluid">
+                <div class="row">
+                    <% include ./partials/navbar %>
+
+                </div>
+            </div>
 
     		<div class="container-fluid" id="hero">
                 <div class="row text-center">
@@ -16,27 +21,25 @@
                             <img src="imgs/pic.jpg">
                         </div>
                         <div id="hero-div">
-                            <h1 id="hero-name">Kimberly Lalmansingh</h1>
+                            <h1 class="font" id="hero-name">Kimberly Lalmansingh</h1>
                         </div>
                     </div>
                 </div>
     		</div>
-    	</div>
 
-        <div class="container-fluid" id="description">
+            <div class="container-fluid" id="description">
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <p>I am a recent graduate from CUNY Queens College with a Bachelor of Science in Computer Science and a minor in Mathematics. I am currently a Software Engineering Intern at a startup called SyncIoT. SyncIoT is an energy-saving software which integrates the Internet of Things, smart devices, and collects data and analytics commercially and residentially.</p>
-                        <p>I am an alum of Tech Talent Pipeline (TTP) which is in partnership with NY Code + Design Academy. During my residency at TTP, I learned about the fundementals of Web Development which consisted of HTML, CSS, Javascript, JQuery, and Node.js with ExpressJS. After residency, I was placed at Queens Library where I interned as a Software Engineer.</p>
+                        <h2 class="font" style="margin-bottom: 30px; font-size: 40px">About Kimberly</h2>
+                        <p class="font">I am a recent graduate from CUNY Queens College with a Bachelor of Science in Computer Science and a minor in Mathematics. I am currently a Software Engineering Intern at a startup called SyncIoT. SyncIoT is an energy-saving software which integrates the Internet of Things, smart devices, and collects data and analytics commercially and residentially.</p>
+                        <p class="font">I am an alum of Tech Talent Pipeline (TTP) which is in partnership with NY Code + Design Academy. During my residency at TTP, I learned about the fundementals of Web Development which consisted of HTML, CSS, Javascript, JQuery, and Node.js with ExpressJS. After residency, I was placed at Queens Library where I interned as a Software Engineer.</p>
                     </div>
                 </div>
             </div>
 
-            <hr />
-
             <div class="container-fluid" id="skills-container">
                 <div class="row justify-content-center">
-                    <h2>Skills & Technologies</h2>
+                    <h2 class="font" style="margin-bottom: 30px; font-size: 40px">Skills & Technologies</h2>
                     <div class="card-deck col-md-10" style="margin-bottom: 10px">
                         <div class="card skill-card border-0">
                             <i class="fab fa-html5 card-img skill-icon"></i>
@@ -95,7 +98,7 @@
 
             <div class="container-fluid" id="projects-container">
                 <div class="row justify-content-center">
-                    <h2>Working with the Web</h2>
+                    <h2 class="font">Working with the Web</h2>
                     <div class="card-deck" id="projects-row-1" style="padding: 15px">
                         <div class="card col-md-3">
                             <div class="card-body text-center">
@@ -176,10 +179,10 @@
                     </div>
                 </div>
             </div>
-        </div>
 
+        <% include ./partials/footer %>
+    </div>
 
-     <% include ./partials/footer %>
 
     </body>
 </html>
