--- a/views/portfolio-page.ejs
+++ b/views/portfolio-page.ejs
@@ -21,7 +21,7 @@
                             <img src="imgs/pic.jpg">
                         </div>
                         <div id="hero-div">
-                            <h1 class="font" id="hero-name">Kimberly Lalmansingh</h1>
+                            <h1 class="font" id="hero-name"></h1>
                         </div>
                     </div>
                 </div>
@@ -30,7 +30,7 @@
             <div class="container-fluid" id="description">
                 <div class="row text-center">
                     <div class="col-md-12">
-                        <h2 class="font" style="margin-bottom: 30px; font-size: 40px">About Kimberly</h2>
+                        <h2 class="font" style="margin-bottom: 30px; font-size: 45px">About Kimberly</h2>
                         <p class="font">I am a recent graduate from CUNY Queens College with a Bachelor of Science in Computer Science and a minor in Mathematics. I am currently a Software Engineering Intern at a startup called SyncIoT. SyncIoT is an energy-saving software which integrates the Internet of Things, smart devices, and collects data and analytics commercially and residentially.</p>
                         <p class="font">I am an alum of Tech Talent Pipeline (TTP) which is in partnership with NY Code + Design Academy. During my residency at TTP, I learned about the fundementals of Web Development which consisted of HTML, CSS, Javascript, JQuery, and Node.js with ExpressJS. After residency, I was placed at Queens Library where I interned as a Software Engineer.</p>
                     </div>
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="row justify-content-center text-center" style="margin-top: 40px">
-                    <h2>Working with Algorithms & Notable Projects</h2>
+                    <h2 class="font">Working with Algorithms & Notable Projects</h2>
                     <div class="card-deck" style="padding: 15px">
                         <div class="card col-md-3">
                             <div class="card-body text-center">
