--- a/views/portfolio-page.ejs
+++ b/views/portfolio-page.ejs
@@ -73,12 +73,12 @@
                             <h5>MongoDB</h5>
                         </div>
                         <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/java.png">
+                            <h5>Java</h5>
+                        </div>
+                        <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/cpp.png">
                             <h5>C++</h5>
-                        </div>
-                         <div class="card skill-card border-0">
-                            <i class="fab fa-php card-img skill-icon"></i>
-                            <h5>PHP</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <img class="my-auto" src="imgs/bootstrap.svg">
@@ -93,6 +93,12 @@
                             <h6>Git/Github/Heroku</h6>
                         </div>
                     </div>
+                    <div class="card-deck col-md-10" style="margin-bottom: 10px">
+                        <div class="card skill-card border-0">
+                            <img class="my-auto" src="imgs/sql.jpeg">
+                            <h5>SQL/MySQL</h5>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -104,21 +110,21 @@
                             <div class="card-body text-center">
                               <h5 class="card-title">Mini Jukebox</h5>
                               <p class="card-text cardp">HTML/CSS, Javascript, Express, EJS, Postgres, Heroku</p>
-                              <a href="" class="project-link">Link Here</a>
+                              <a href="https://vast-taiga-12168.herokuapp.com/mediasearch" class="project-link">Link Here</a>
                             </div>
                         </div>
                         <div class="card col-md-3">
                             <div class="card-body text-center">
                               <h5 class="card-title">Youtube Clone</h5>
                               <p class="card-text cardp">HTML/CSS, Javascript, React, JSX</p>
-                              <a href="" class="project-link">Link Here</a>
+                              <a href="https://github.com/kimlalman28/YouTube-Clone" class="project-link">Link Here</a>
                             </div>
                         </div>
                         <div class="card col-md-3">
                             <div class="card-body text-center">
                               <h5 class="card-title">Portfolio/Blog</h5>
                               <p class="card-text cardp">HTML/CSS, Javascript, Express, EJS, Postgres, Heroku</p>
-                              <a href="" class="project-link">Link Here</a>
+                              <a href="https://radiant-headland-87323.herokuapp.com/portfolio" class="project-link">Link Here</a>
                             </div>
                         </div>
                         <div class="card col-md-3">
