--- a/views/portfolio-page.ejs
+++ b/views/portfolio-page.ejs
@@ -85,8 +85,8 @@
                             <h5>Bootstrap</h5>
                         </div>
                         <div class="card skill-card border-0">
-                            <i class="fab fa-react card-img skill-icon"></i>
-                            <h5>React</h5>
+                            <i class="fab fa-angular card-img skill-icon"></i>
+                            <h5>Angular</h5>
                         </div>
                         <div class="card skill-card border-0">
                             <i class="fab fa-github card-img skill-icon"></i>
