--- a/views/portfolio-page.ejs
+++ b/views/portfolio-page.ejs
@@ -14,7 +14,7 @@
         <div class="row text-center">
           <div class="col-md-12">
             <div id="photo">
-              <img src="imgs/pic.jpg">
+              <img src="imgs/pic2.jpg">
             </div>
             <div id="hero-div">
               <h1 class="font" id="hero-name"></h1>
